--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				<div class="about-container">
 					<div class="left-about">
-						<h4>Information About Me</h4>
+						<!--<h4>Information About Me</h4>-->
 						<p>
 							A software developer with 7+ years of delivering expert customer service and sales. Passionate about technology and developing solutions that positively impact lives. Eager to leverage excellent communication, relationship
 							management, diverse experience, and technical skills to a software team.
