--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<h1 class="name">Hi, I am <span>Georgios Kokotinis.</span></h1>
 					<h2>A Front End Developer</h2>
 					<div class="btn-con">
-						<a href="data/Georgios K Resume.pdf" class="main-btn" download>
+						<a href="data/GK Resume.pdf" class="main-btn" download>
 							<span class="btn-text">Download Resume</span>
 							<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 						</a>
@@ -45,13 +45,13 @@
 				</div>
 				<div class="about-container">
 					<div class="left-about">
-						<!--<h4>Information About Me</h4>-->
+						<h4>Information About Me</h4>
 						<p>
 							A software developer with 7+ years of delivering expert customer service and sales. Passionate about technology and developing solutions that positively impact lives. Eager to leverage excellent communication, relationship
 							management, diverse experience, and technical skills to a software team.
 						</p>
 						<div class="btn-con">
-							<a href="data/Georgios K Resume.pdf" class="main-btn" download>
+							<a href="data/GK Resume.pdf" class="main-btn" download>
 								<span class="btn-text">Download Resume</span>
 								<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 							</a>
@@ -181,18 +181,27 @@
 								<a href="https://superhealthyfood.herokuapp.com/" target="_blank">
 									<h4>Omnifood</h4>
 								</a>
-								<p>Fully Responsive Web Application. Tools used to implement this app, HTML, CSS for the structure and the style of the page, and jQuery for the animations.</p>
+								<p>
+									• Omnifood is a mockup website of a premium food delivery company that makes it easy for the user to have fresh healthy food in multiple locations around the world. <br />
+									• Html, CSS, JavaScript(jQuery). <br />
+									• I used Html for the structure of the site , CSS for the styling, and jQuery for the animation navbar and the buttons.
+								</p>
 							</div>
 						</div>
 						<div class="project">
-							<a href="https://kokoboy-weather-application.herokuapp.com/" target="_blank">
-								<img src="img/weather-app.png" alt="" />
+							<a href="https://new-weatehr-app1.herokuapp.com/" target="_blank">
+								<img src="img/New-weather-app.png" alt="" />
 							</a>
 							<div class="project-text">
-								<a href="https://kokoboy-weather-application.herokuapp.com/" target="_blank">
+								<a href="https://new-weatehr-app1.herokuapp.com/" target="_blank">
 									<h4>Weather Application</h4>
 								</a>
-								<p>Forecast web application, which fetches precise location data from Mapbox APIs and synchronizes them with weatherstacks real-time APIs, to give us a minimalistic and accurate weather application.</p>
+								<p>
+									• Weather Application is a weather App that fetches accurate real-time weather conditions of any given location worldwide. <br />
+									• Html, CSS, Node.js(Express), Mapbox API, Weatherstack API. <br />
+									• Used third-party services(API) to fetch geolocation and real-time weather data. With Node.js(Express) I convert the location data to a forecast and then rents them to the screen of the user with Html, and styles
+									the application with CSS.
+								</p>
 							</div>
 						</div>
 						<div class="project">
@@ -203,7 +212,12 @@
 								<a href="https://dice-tavern.herokuapp.com/" target="_blank">
 									<h4>Dice Tavern</h4>
 								</a>
-								<p>Dice tavern is a dice game. Inspired by D&D and dice/role-playing games. The tools used to implement this project is JavaScript, HTML, and CSS.</p>
+								<p>
+									• Dice tavern is a role-playing dice game that puts the player against the player. it requires strategy and luck to prepare your. <br />
+									• Html, CSS, Vanilla JavaScript. <br />
+									• Html and CSS are for the style and structure of the page, and Vanilla JavaScript is responsible for rolling the dice and converting dice points into action points that the player can use to attack or defend
+									against the other player.
+								</p>
 							</div>
 						</div>
 						<div class="project">
@@ -215,8 +229,9 @@
 									<h4>NoteAbles</h4>
 								</a>
 								<p>
-									Noteables is a web app that can create and manage notes and lists. Tools used to implement this app, Python, and Django for the back-end and to import the TinyMCE editor and JavaScript, HTML, and CSS for the
-									Front-end.
+									• Noteables is a web app that can create and manage notes and lists. <br />
+									• Python (Django), Html, CSS, Javascript. <br />
+									• Used third-party services(API) to import the TinyMCE editor with Python on the backend, and JavaScript for the client-side validation.
 								</p>
 							</div>
 						</div>
