--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<h1 class="name">Hi, I am <span>Georgios Kokotinis.</span></h1>
 					<h2>A Front End Developer</h2>
 					<div class="btn-con">
-						<a href="data/GK Resume.pdf" class="main-btn" download>
+						<a href="data/Georgios K Resume.pdf" class="main-btn" download>
 							<span class="btn-text">Download Resume</span>
 							<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 						</a>
@@ -51,7 +51,7 @@
 							management, diverse experience, and technical skills to a software team.
 						</p>
 						<div class="btn-con">
-							<a href="data/GK Resume.pdf" class="main-btn" download>
+							<a href="data/Georgios K Resume.pdf" class="main-btn" download>
 								<span class="btn-text">Download Resume</span>
 								<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 							</a>
