--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 										<i class="fa-solid fa-location-dot"></i>
 										<p>Location :</p>
 									</div>
-									<p>Alexandria, VA, USA</p>
+									<p>Miami, FL, USA</p>
 								</div>
 								<div class="contact-item">
 									<div class="icon">
