--- a/index.html
+++ b/index.html
@@ -2,25 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="/style/style.css" />
-		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com" />
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@400;700&display=swap"
-			rel="stylesheet" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/style/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
@@ -30,26 +17,19 @@
 		<title>Portfolio</title>
 	</head>
 	<body id="main-content">
-		<header
-			class="section sec1 header active"
-			id="home">
+		<header class="section sec1 header active" id="home">
 			<div class="header-content">
 				<div class="left-header">
 					<div class="h-shape"></div>
 					<div class="image">
-						<img
-							src="img/20190424_133441.jpg"
-							alt="" />
+						<img src="img/20190424_133441.jpg" alt="" />
 					</div>
 				</div>
 				<div class="right-header">
 					<h1 class="name">Hi, I am <span>Georgios Kokotinis.</span></h1>
 					<h2>A Full Stack Developer</h2>
 					<div class="btn-con">
-						<a
-							href="data/Kokotinis Portfolio Resume.pdf"
-							class="main-btn"
-							download>
+						<a href="data/Kokotinis Portfolio Resume.pdf" class="main-btn" download>
 							<span class="btn-text">Download Resume</span>
 							<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 						</a>
@@ -58,9 +38,7 @@
 			</div>
 		</header>
 		<main>
-			<section
-				class="section sec2 about"
-				id="about">
+			<section class="section sec2 about" id="about">
 				<div class="main-title">
 					<h2>About <span>me</span><span class="bg-text">my stats</span></h2>
 				</div>
@@ -72,10 +50,7 @@
 							management, diverse experience, and technical skills to a software team.
 						</p>
 						<div class="btn-con">
-							<a
-								href="data/Kokotinis Portfolio Resume.pdf"
-								class="main-btn"
-								download>
+							<a href="data/Kokotinis Portfolio Resume.pdf" class="main-btn" download>
 								<span class="btn-text">Download Resume</span>
 								<span class="btn-icon"><i class="fa-solid fa-download"></i></span>
 							</a>
@@ -191,26 +166,18 @@
 					</div>
 				</div>
 			</section>
-			<section
-				class="section sec4"
-				id="project">
+			<section class="section sec4" id="project">
 				<div class="project-content">
 					<div class="main-title">
 						<h2>My <span>Projects</span><span class="bg-text">My Work</span></h2>
 					</div>
 					<div class="projects">
 						<div class="project">
-							<a
-								href="https://superhealthyfood.herokuapp.com/"
-								target="_blank">
-								<img
-									src="img/Omnifood.png"
-									alt="" />
+							<a href="https://superhealthyfood.herokuapp.com/" target="_blank">
+								<img src="img/Omnifood.png" alt="" />
 							</a>
 							<div class="project-text">
-								<a
-									href="https://superhealthyfood.herokuapp.com/"
-									target="_blank">
+								<a href="https://superhealthyfood.herokuapp.com/" target="_blank">
 									<h4>Omnifood</h4>
 								</a>
 								<p>
@@ -221,17 +188,11 @@
 							</div>
 						</div>
 						<div class="project">
-							<a
-								href="https://new-weatehr-app1.herokuapp.com/"
-								target="_blank">
-								<img
-									src="img/New-weather-app.png"
-									alt="" />
+							<a href="https://new-weatehr-app1.herokuapp.com/" target="_blank">
+								<img src="img/New-weather-app.png" alt="" />
 							</a>
 							<div class="project-text">
-								<a
-									href="https://new-weatehr-app1.herokuapp.com/"
-									target="_blank">
+								<a href="https://new-weatehr-app1.herokuapp.com/" target="_blank">
 									<h4>Weather Application</h4>
 								</a>
 								<p>
@@ -243,17 +204,11 @@
 							</div>
 						</div>
 						<div class="project">
-							<a
-								href="https://dice-tavern.herokuapp.com/"
-								target="_blank">
-								<img
-									src="img/Dice-Tavern.png"
-									alt="" />
+							<a href="https://dice-tavern.herokuapp.com/" target="_blank">
+								<img src="img/Dice-Tavern.png" alt="" />
 							</a>
 							<div class="project-text">
-								<a
-									href="https://dice-tavern.herokuapp.com/"
-									target="_blank">
+								<a href="https://dice-tavern.herokuapp.com/" target="_blank">
 									<h4>Dice Tavern</h4>
 								</a>
 								<p>
@@ -265,17 +220,11 @@
 							</div>
 						</div>
 						<div class="project">
-							<a
-								href="https://noteables07.herokuapp.com/"
-								target="_blank">
-								<img
-									src="img/Note-1.png"
-									alt="" />
+							<a href="https://noteables07.herokuapp.com/" target="_blank">
+								<img src="img/Note-1.png" alt="" />
 							</a>
 							<div class="project-text">
-								<a
-									href="https://noteables07.herokuapp.com/"
-									target="_blank">
+								<a href="https://noteables07.herokuapp.com/" target="_blank">
 									<h4>NoteAbles</h4>
 								</a>
 								<p>
@@ -288,9 +237,7 @@
 					</div>
 				</div>
 			</section>
-			<section
-				class="section sec5 contact"
-				id="contact">
+			<section class="section sec5 contact" id="contact">
 				<div class="contact-container">
 					<div class="main-title">
 						<h2>Contact<span> me</span><span class="bg-text">my info</span></h2>
@@ -325,56 +272,29 @@
 							</div>
 							<div class="contact-icon">
 								<div class="social-icons">
-									<a
-										href="https://github.com/Kokoboy87"
-										target="_blank">
+									<a href="https://github.com/Kokoboy87" target="_blank">
 										<i class="fa-brands fa-github"></i>
 									</a>
-									<a
-										href="https://www.linkedin.com/in/georgioskokotinis/"
-										target="_blank">
+									<a href="https://www.linkedin.com/in/georgioskokotinis/" target="_blank">
 										<i class="fa-brands fa-linkedin"></i>
 									</a>
-									<a
-										href="https://twitter.com/GKokotinis"
-										target="_blank">
+									<a href="https://twitter.com/GKokotinis" target="_blank">
 										<i class="fa-brands fa-twitter"></i>
 									</a>
 								</div>
 							</div>
 						</div>
 						<div class="right-contact">
-							<form
-								action="https://formspree.io/f/xoqrkrra"
-								class="contact-form"
-								method="POST">
+							<form action="https://formspree.io/f/xoqrkrra" class="contact-form" method="POST">
 								<div class="input-control i-c-2">
-									<input
-										type="text"
-										name="name"
-										required
-										placeholder="YOUR NAME" />
-									<input
-										type="email"
-										name="email"
-										required
-										placeholder="YOUR EMAIL" />
+									<input type="text" name="name" required placeholder="YOUR NAME" />
+									<input type="email" name="email" required placeholder="YOUR EMAIL" />
 								</div>
 								<div class="input-control">
-									<input
-										type="text"
-										name="subject"
-										required
-										placeholder="ENTER SUBJECT" />
+									<input type="text" name="subject" required placeholder="ENTER SUBJECT" />
 								</div>
 								<div class="input-control">
-									<textarea
-										name="message"
-										id=""
-										cols="15"
-										rows="6"
-										required
-										placeholder="MESSAGE ME HERE..."></textarea>
+									<textarea name="message" id="" cols="15" rows="6" required placeholder="MESSAGE ME HERE..."></textarea>
 								</div>
 								<div class="submit-btn">
 									<button type="submit">
@@ -392,24 +312,16 @@
 		</main>
 
 		<div class="controls">
-			<div
-				class="control control-1 active-btn"
-				data-id="home">
+			<div class="control control-1 active-btn" data-id="home">
 				<i class="fa-solid fa-house"></i>
 			</div>
-			<div
-				class="control control-2"
-				data-id="about">
+			<div class="control control-2" data-id="about">
 				<i class="fa-solid fa-user-astronaut"></i>
 			</div>
-			<div
-				class="control control-3"
-				data-id="project">
+			<div class="control control-3" data-id="project">
 				<i class="fa-solid fa-briefcase"></i>
 			</div>
-			<div
-				class="control control-5"
-				data-id="contact">
+			<div class="control control-5" data-id="contact">
 				<i class="fa-solid fa-envelope-open"></i>
 			</div>
 		</div>
